--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -8,6 +8,11 @@ dependencies{
     implementation 'org.testng:testng:7.0.0-beta3'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
     implementation 'it.ozimov:hamcrest:2.0.0'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.7'
+    implementation 'commons-net:commons-net:3.4'
+    implementation 'org.subethamail:subethasmtp:3.1.7'
+    implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.4'
+    implementation 'ch.qos.logback:logback-classic:1.1.11'
 }
 
 test {
