--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -13,6 +13,8 @@ dependencies{
     implementation 'org.subethamail:subethasmtp:3.1.7'
     implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.4'
     implementation 'ch.qos.logback:logback-classic:1.1.11'
+    implementation 'mysql:mysql-connector-java:8.0.15'
+    implementation 'org.hibernate:hibernate-core:5.4.1.Final'
 }
 
 test {
