--- a/adressbook-web-tests/build.gradle
+++ b/adressbook-web-tests/build.gradle
@@ -14,6 +14,8 @@ dependencies{
     implementation 'ch.qos.logback:logback-classic:1.1.11'
     implementation 'mysql:mysql-connector-java:8.0.15'
     implementation 'org.hibernate:hibernate-core:5.4.1.Final'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'org.apache.httpcomponents:fluent-hc:4.5.7'
 }
 
 task testGroups(type: Test){
